[package]
name = "glance-core"
version = "0.2.0"
edition = "2024"
authors = ["Wahid Khan <wk170179@gmail.com>", "Moulik Agarwal <moulik.agarwal@gmail.com"]
description = "A high-level core library for image IO, display, and drawing operations."
license = "GPL-3.0"
keywords = ["image", "graphics", "display"]
categories = ["graphics", "computer-vision", "visualization", "multimedia::images"]

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
image = "0.25.6"
minifb = { version = "0.28.0", features = ["wayland"] }
num-traits = "0.2.19"
rayon = "1.10.0"
