[package]
name = "glance"
version = "0.1.1"
edition = "2024"
authors = ["Wahid Khan <wk170179@gmail.com>", "Moulik Agarwal <moulik.agarwal@gmail.com"]
description = "A computer vision library in Rust."
license = "GPL-3.0"
keywords = ["image", "graphics", "display"]
categories = ["graphics", "computer-vision", "visualization", "multimedia::images"]

[dependencies]
glance-core = { version = "0.2.1", path = "../glance-core" }
glance-imgproc = { version = "0.1.0", path = "../glance-imgproc" }
